# line-tracking-robot

./: README.md  package.xml  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/line_follower_robot/lib/line_follower_robot/: line_follower_node
install/line_follower_robot/share/line_follower_robot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/line_follower_robot/share/line_follower_robot/urdf/: robot.urdf.xacro
install/line_follower_robot/share/line_follower_robot/worlds/: line_world.world
launch/: sim.launch.py
line_follower_robot/: line_follower_node.py
log/: latest_build
